--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,11 @@
     <version>4.1.2</version>
 </dependency>
 
-    
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>3.141.59</version>
+    </dependency>
     
     <dependency>
     <groupId>io.rest-assured</groupId>
@@ -111,6 +115,14 @@
     <artifactId>extentreports</artifactId>
     <version>4.0.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>
+
 	
   </dependencies>
 </project>
